--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <!--[if gt IE 8]> <html> <![endif]-->
 <!--[if !IE]><!--><html lang="en"><!-- <![endif]-->
 <head>
-	<title>Happy Birthday</title>
+	<title>Happy Birthday Amruta</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Happy Birthday Xola">
+	<meta name="description" content="Happy Birthday Amruta">
 	<meta name="robots" content="index, follow" />
 	<link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/" /> 
     <meta name="keywords" content="Birthday, Happy">
@@ -45,16 +45,22 @@
     	<h2 style="color:#D14D39;">D</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">X</h2>
+    	<h2 style="color:#8FAD00;">A</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">O</h2>
+    	<h2 style="color:#8377E4;">R</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">L</h2>
+    	<h2 style="color:#99C96A;">T</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">A</h2>
+    	<h2 style="color:#20CFB4;">I</h2>
+    </div>
+    <div class="balloons text-center" id="b8">
+    	<h2 style="color:#F2B300;">S</h2>
+    </div>
+    <div class="balloons text-center" id="b9">
+    	<h2 style="color:#D14D39;">T</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -113,44 +119,34 @@
 				<p>Do you know..?</p>
 				<p>today is just special</p>
 				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
-				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
+				<p>It's your special day</p>
+				<p>Happy Birthday, Amruta!</p>
+				<p>It's been 1.5 years</p>
+				<p>since you came into my life</p>
+				<p>Thank you for putting up with</p>
+				<p>my weird behaviors and mood swings</p>
+				<p>I am extremely sorry</p>
+				<p>for what I have done</p>
+				<p>But the past few months...</p>
+				<p>I've been missing you so much</p>
+				<p>Do you remember</p>
+				<p>the first time we met</p>
+				<p>at Ahmedabad mandir?</p>
+				<p>That moment feels like yesterday</p>
 				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>because...</p>
-				<p>God has your back</p>
-				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
-				<p>lastly...</p>
+				<p>May your life be filled with joy</p>
+				<p>May all your shubh sankalps come true</p>
+				<p>Keep your artistic spirit alive (and gift me few more paintings)</p>
+				<p>This year will be amazing as you will be graduated with another degree</p>
+				<p>I pray that you'll find</p>
+				<p>happiness in every moment</p>
+				<p>Fill today with your beautiful smile</p>
+				<p>and make it the best memory</p>
+				<p>Lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Xola Mathembisa</p>
+				<p>A very Happy Birthday, Amruta Bhatt</p>
+				<p><strong>- Shivam</strong></p>
+				<p>Someone who is missing your "good morning" message everyday</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
@@ -163,20 +159,10 @@
 					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
 					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-primary" id="story">A message for you</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
-			<!-- <div class="col-md-2">
-			</div>
-			<div class="col-md-2">
-			</div>
-			<div class="col-md-2">
-			</div>
-			<div class="col-md-2">
-			</div>
-			<div class="col-md-2">
-			</div> -->
 		</div>
 
 
