--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
 	<!-- <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'> -->
 	<link rel="stylesheet/less" href="cake.less">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
+	<style>
+		/* Additional styles for 8th and 9th balloons */
+		#b8 {
+			left: 77.5%;
+		}
+		#b9 {
+			left: 88.5%;
+		}
+	</style>
 </head>
 
 <body>
@@ -135,10 +144,11 @@
 				<p>That moment feels like yesterday</p>
 				<p>I wish you all the best</p>
 				<p>May your life be filled with joy</p>
-				<p>May all your shubh sankalps come true</p>
-				<p>Keep your artistic spirit alive (and gift me few more paintings)</p>
-				<p>This year will be amazing as you will be graduated with another degree</p>
-				<p>I pray that you'll find</p>
+				<p>May all your dreams come true</p>
+				<p>Keep your artistic spirit alive</p>
+				<p>and keep creating magic</p>
+				<p>This year will be amazing</p>
+				<p>I hope you'll find</p>
 				<p>happiness in every moment</p>
 				<p>Fill today with your beautiful smile</p>
 				<p>and make it the best memory</p>
@@ -146,7 +156,7 @@
 				<p>I'd like to wish you one more time</p>
 				<p>A very Happy Birthday, Amruta Bhatt</p>
 				<p><strong>- Shivam</strong></p>
-				<p>Someone who is missing your "good morning" message everyday</p>
+				<p>A friend who is missing you</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
