Revise birthday message for Amruta

--- a/index.html
+++ b/index.html
@@ -132,31 +132,20 @@
 				<p>Happy Birthday, Amruta!</p>
 				<p>It's been 1.5 years</p>
 				<p>since you came into my life</p>
-				<p>Thank you for putting up with</p>
-				<p>my weird behaviors and mood swings</p>
-				<p>I am extremely sorry</p>
-				<p>for what I have done</p>
-				<p>But the past few months...</p>
-				<p>I've been missing you so much</p>
 				<p>Do you remember</p>
-				<p>the first time we met</p>
-				<p>at Ahmedabad mandir?</p>
+				<p>the first time we met at Shahibaug mandir ?</p>
 				<p>That moment feels like yesterday</p>
 				<p>I wish you all the best</p>
 				<p>May your life be filled with joy</p>
-				<p>May all your dreams come true</p>
 				<p>Keep your artistic spirit alive</p>
-				<p>and keep creating magic</p>
+				<p>and keep creating magic...</p>
 				<p>This year will be amazing</p>
 				<p>I hope you'll find</p>
 				<p>happiness in every moment</p>
-				<p>Fill today with your beautiful smile</p>
-				<p>and make it the best memory</p>
 				<p>Lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>A very Happy Birthday, Amruta Bhatt</p>
+				<p>A very Happy Birthday, Amruta </p>
 				<p><strong>- Shivam</strong></p>
-				<p>A friend who is missing you</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
