--- a/index.html
+++ b/index.html
@@ -128,10 +128,9 @@
 				<p>Do you know..?</p>
 				<p>today is just special</p>
 				<p>so special to you</p>
-				<p>It's your special day</p>
 				<p>Happy Birthday, Amruta!</p>
 				<p>It's been 1.5 years</p>
-				<p>since you came into my life</p>
+				<p>since we became friends </p>
 				<p>Do you remember</p>
 				<p>the first time we met at Shahibaug mandir ?</p>
 				<p>That moment feels like yesterday</p>
